# io-module

./: .gitignore  .gitmodules  CMLibStorage.cmake  CMakeLists.txt  README.md  server.py
cmake/: Dependencies.cmake
doc/: IO_module_doc.md
doc/images/drawio/: DeviceCommand_diagram.drawio  DeviceStatus_diagram.drawio
include/bringauto/io_module_utils/: ActionType.hpp  ConfigParameters.hpp  DeviceCommand.hpp  DeviceError.hpp  DeviceID.hpp  DeviceStatus.hpp  OutputAction.hpp  OutputStatus.hpp  SerializationUtils.hpp  external_server_api_structures.hpp
include/bringauto/modules/io_module/: io_module.h
include/bringauto/modules/io_module/devices/arduino_mega/: arduino_mega_external_server.hpp  arduino_mega_module_manager.hpp
include/bringauto/modules/io_module/devices/arduino_opta/: arduino_opta_external_server.hpp  arduino_opta_module_manager.hpp
include/bringauto/modules/io_module/devices/arduino_uno/: arduino_uno_external_server.hpp  arduino_uno_module_manager.hpp
include/bringauto/modules/io_module/devices/button/: button_module_manager.hpp
source/: device_management.cpp  external_server_api.cpp  memory_management.cpp  module_manager.cpp
source/bringauto/io_module_utils/: ConfigParameters.cpp  DeviceCommand.cpp  DeviceError.cpp  DeviceID.cpp  OutputAction.cpp  OutputStatus.cpp  SerializationUtils.cpp
source/bringauto/modules/devices/arduino_mega/: arduino_mega_external_server.cpp  arduino_mega_module_manager.cpp
source/bringauto/modules/devices/arduino_opta/: arduino_opta_external_server.cpp  arduino_opta_module_manager.cpp
source/bringauto/modules/devices/arduino_uno/: arduino_uno_external_server.cpp  arduino_uno_module_manager.cpp
source/bringauto/modules/devices/button/: button_module_manager.cpp
